<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.zksolution.physicalfitnesstest.presentation.common.BindingDateConverter"/>

        <variable name="viewModel"
                  type="com.zksolution.physicalfitnesstest.presentation.personeditor.PersonEditorViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/first_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="textCapSentences"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@={viewModel.person.firstName}"
                        tools:text="Richard"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/last_name">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="textCapSentences"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@={viewModel.person.lastName}"
                        tools:text="McDonald's"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/id_number">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:inputType="number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@={viewModel.person.idNumber}"
                        tools:text="5421365"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:hint="@string/weight">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:inputType="numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:text="@={viewModel.person.weight}"
                        tools:text="70.5" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/gender"/>

            <RadioGroup
                    android:id="@+id/person_editor_gender_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:orientation="horizontal"
                    android:checkedButton="@{viewModel.getInitialSelectedGender()}"
                    android:onCheckedChanged="@{viewModel.onGenderCheckedChanged}">

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/person_editor_male_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/male"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/person_editor_female_rb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:text="@string/female"/>

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/birthday"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/person_editor_calendar_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:focusable="true"
                        android:src="@drawable/ic_calendar_24dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/person_editor_birthday_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@={BindingDateConverter.dateToString(viewModel.person.birthday)}"
                        tools:text="01/01/1900"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>