<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="viewModel" type="com.zksolution.physicalfitnesstest.presentation.testpersonjogging.TestPersonJoggingViewModel"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jogging"
                android:layout_margin="@dimen/margin_huge"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Jogging"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:hint="@string/field_distance">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@={viewModel.testPersonJogging.fieldDistance}"
                    android:afterTextChanged="@{() -> viewModel.onJoggingDetailsChanged()}"
                    tools:text="70.5" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:hint="@string/laps">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:inputType="number"
                    android:text="@={viewModel.testPersonJogging.laps}"
                    android:afterTextChanged="@{() -> viewModel.onJoggingDetailsChanged()}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="20" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textStyle="bold"
                android:text="@string/total_distance"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{viewModel.totalDistance}"
                tools:text="26.24 m"/>

        <include layout="@layout/view_button_next_question"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>